--- a/templates/frame.mustache
+++ b/templates/frame.mustache
@@ -33,6 +33,7 @@
 <div  class="container">
     <h5>{{heading}}</h5>
     <p>{{user}}</p>
+    {{> block_superframe/links}}
     <iframe src="{{url}}" height="{{height}}" width="{{width}}">
     </iframe>
     <p><a href="{{{returnlink}}}">{{returntext}}</a></p>
