--- a/templates/links.mustache
+++ b/templates/links.mustache
@@ -21,27 +21,19 @@
     This template renders a url in an iframe of given size.
 
     Example context (json):
-    {
-        "heading": "My superframe",
-        "url": "http://www.moodlebites.com",
-        "height": "400",
-        "width": "600"
+    {    
+    tableheaders: [heading 1, heading 2]
+    tabledata: [ [item1 row 1, item2 row 1], [item1 row2, item2 row2], [...] ]
     }
+
 }}
 
-
-<div>
-
-    <h3>{{welcome}}</h3>
-    <a href="{{{url}}}">{{text}}</a>
-    <br>
-    <a href={{{popurl}}} target="_blank"> {{poptext}}</a>
-    <br>
-    <a href={{{tableurl}}} target="_blank"> {{tabletext}}</a>
-    <br><br>
-    {{#studentlist}}
-      <ul class="list-group">
-        <li class="list-group-item list-group-item-warning">{{.}}</li>
-    </ul>
-    {{/studentlist}}
-</div>
+<div  class="container">
+      <ul class="list-inline">
+        {{#linkdata}}
+          <li class="list-inline-item">
+             <a href="{{{link}}}">{{text}}</a>
+          </li>
+        {{/linkdata}}
+      </ul>
+  </div>
